--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,10 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: 862-387-4011</p>
+<p>Email 1: chrisb1nj@gmail.com</p>
+<p>Email 2:chrisb1nj@outlook.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  2755 Revolution Street #102<br />
+  Melbourne Fl 32935<br />
+  Brevard County <br />
 </p>
